added security question and answer as well as relevant tests
